Change root layout (detail) to ScrollView. Add more and less TextView to Overview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="movieTitle">#25FA36</color>
+    <color name="linkLike">#3535AC</color>
 </resources>
