--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,54 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.robby.popularmovies_stage1a.MovieDetailActivity">
 
-    <TextView
-        android:id="@+id/tv_movie_title_detail"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/movieTitle"
-        android:padding="15dp"
-        android:textSize="25sp" />
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="2"
-        android:padding="8dp">
-
-        <ImageView
-            android:id="@+id/im_movie_poster_detail"
-            android:layout_column="0"
-            android:layout_marginRight="8dp"
-            android:layout_row="0"
-            android:layout_rowSpan="2" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_movie_release_date_detail"
-            android:layout_column="1"
-            android:layout_row="0"
-            android:fontFamily="monospace"/>
-
-        <TextView
-            android:id="@+id/tv_movie_rating_detail"
-            android:layout_column="1"
-            android:layout_row="1" />
-    </GridLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp">
-
-        <TextView
-            android:id="@+id/tv_movie_overview"
+            android:id="@+id/tv_movie_title_detail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:background="@color/movieTitle"
+            android:padding="15dp"
+            android:textSize="25sp" />
 
-</LinearLayout>
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="2"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/im_movie_poster_detail"
+                android:layout_column="0"
+                android:layout_marginRight="8dp"
+                android:layout_row="0"
+                android:layout_rowSpan="2" />
+
+            <TextView
+                android:id="@+id/tv_movie_release_date_detail"
+                android:layout_column="1"
+                android:layout_row="0"
+                android:fontFamily="monospace" />
+
+            <TextView
+                android:id="@+id/tv_movie_rating_detail"
+                android:layout_column="1"
+                android:layout_row="1" />
+        </GridLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
+                android:id="@+id/tv_movie_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="5" />
+
+            <TextView
+                android:id="@+id/tv_more"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom|end"
+                android:text="@string/text_more"
+                android:textColor="@color/linkLike"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tv_less"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom|end"
+                android:text="@string/text_less"
+                android:textColor="@color/linkLike"
+                android:visibility="invisible" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
